--- a/composer.json
+++ b/composer.json
@@ -1,44 +1,35 @@
 {
-    "name"       : "hoa/regex",
-    "description": "The Hoa\\Regex library.",
-    "type"       : "library",
-    "keywords"   : ["library", "regex", "compiler"],
-    "homepage"   : "https://hoa-project.net/",
-    "license"    : "BSD-3-Clause",
-    "authors"    : [
-        {
-            "name" : "Ivan Enderlin",
-            "email": "ivan.enderlin@hoa-project.net"
-        },
-        {
-            "name"    : "Hoa community",
-            "homepage": "https://hoa-project.net/"
-        }
-    ],
-    "support": {
-        "email" : "support@hoa-project.net",
-        "irc"   : "irc://chat.freenode.net/hoaproject",
-        "forum" : "https://users.hoa-project.net/",
-        "docs"  : "https://central.hoa-project.net/Documentation/Library/Regex",
-        "source": "https://central.hoa-project.net/Resource/Library/Regex"
-    },
-    "require": {
-        "php"            : ">=7.1",
-        "hoa/consistency": "dev-master",
-        "hoa/exception"  : "dev-master",
-        "hoa/math"       : "dev-master",
-        "hoa/protocol"   : "dev-master",
-        "hoa/ustring"    : "dev-master",
-        "hoa/visitor"    : "dev-master"
-    },
-    "autoload": {
-        "psr-4": {
-            "Hoa\\Regex\\": "Source"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.x-dev"
-        }
-    }
+	"name": "hoa-math-community/regex",
+	"description": "The Hoa\\Regex library.",
+	"type": "library",
+	"keywords": [
+		"library",
+		"regex",
+		"compiler"
+	],
+	"license": "BSD-3-Clause",
+	"authors": [
+		{
+			"name": "Ivan Enderlin",
+			"email": "ivan.enderlin@hoa-project.net"
+		},
+		{
+			"name": "Hoa community",
+			"homepage": "https://hoa-project.net/"
+		}
+	],
+	"require": {
+		"php": "~8.0",
+		"hoa-math-community/consistency": "~3.0",
+		"hoa-math-community/exception": "~3.0",
+		"hoa-math-community/math": "~2.0",
+		"hoa-math-community/protocol": "~2.0",
+		"hoa-math-community/ustring": "~5.0",
+		"hoa-math-community/visitor": "~3.0"
+	},
+	"autoload": {
+		"psr-4": {
+			"Hoa\\Regex\\": "Source"
+		}
+	}
 }
